--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "xml2js": "^0.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
