--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "react-router-bootstrap": "^0.23.1",
     "whatwg-fetch": "^1.0.0",
     "xml2js": "^0.4.17"
   },
