--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
+    "react-hotkey": "^0.6.0",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1",
     "whatwg-fetch": "^1.0.0",
