--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
