--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1"
   },
