--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "inline-grader",
+  "homepage": "https://luisnaranjo733.github.io/inline-grader",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "gh-pages": "^0.11.0",
     "react-scripts": "0.6.1",
     "redux-devtools": "^3.3.1"
   },
