--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.2",
     "react-hotkeys": "^0.9.0",
     "react-redux": "^4.4.5",
