--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "redux-devtools": "^3.3.1"
+    "redux-devtools": "^3.3.1",
+    "whatwg-fetch": "^2.0.0",
+    "xml2js": "^0.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
