--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^2.6.0",
     "gh-pages": "^0.11.0",
     "react-scripts": "0.6.1",
     "redux-devtools": "^3.3.1"
