--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "enzyme": "^2.6.0",
     "gh-pages": "^0.11.0",
+    "react-addons-test-utils": "^15.4.0",
     "react-scripts": "0.6.1",
     "redux-devtools": "^3.3.1"
   },
