--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gh-pages": "^0.11.0",
     "react-addons-test-utils": "^15.4.0",
     "react-scripts": "0.6.1",
-    "redux-devtools": "^3.3.1"
+    "redux-devtools": "^3.3.1",
+    "sinon": "^1.17.6"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
